Fix #2916 Error log Message Overflow

--- a/app/styles-dev/main/components/_content.scss
+++ b/app/styles-dev/main/components/_content.scss
@@ -527,3 +527,7 @@ span.required {
 
   }
 }
+
+.pre-wrap {
+  white-space: pre-wrap;
+}
