--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -7766,6 +7766,9 @@ span.required {
     .card .toolbar > .btn-group.btn-group-right {
       float: right; }
 
+.pre-wrap {
+  white-space: pre-wrap; }
+
 /* @import this file */
 .form-control {
   border-radius: 0;
